--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ script: |
       scons build -j2 VERBOSE=y python2_package=full python3_package=full python3_cmd=/usr/bin/python3 blas_lapack_libs=lapack,blas optimize=n coverage=y
       scons test
       scons build sphinx_docs=y doxygen_docs=y
-      if [[ "${TRAVIS_PULL_REQUEST}" == "false" ]] && [[ "${TRAVIS_BRANCH}" == "master" ]]; then
+      if [[ "${TRAVIS_PULL_REQUEST}" == "false" ]] && [[ "${TRAVIS_BRANCH}" == "master" ]] && [[ "${TRAVIS_REPO_SLUG}" == "Cantera/cantera" ]]; then
         openssl aes-256-cbc -k "${ctdeploy_pass}" -in ./doc/ctdeploy_key.enc -out ./doc/ctdeploy_key -d
         chmod 0600 ./doc/ctdeploy_key
         RSYNC_OPTIONS=(
@@ -73,6 +73,8 @@ script: |
         RSYNC_DEST="testing.cantera.org/documentation/dev"
         DOCS_OUTPUT_DIR="./build/docs/"
         rsync "${RSYNC_OPTIONS[@]}" "${DOCS_OUTPUT_DIR}" ${RSYNC_USER}@${RSYNC_SERVER}:${RSYNC_DEST}
+      else
+        echo "Skipping documentation upload from source other than Cantera/cantera/master"
       fi
   else
       python3 `which scons` build -j2 VERBOSE=y python2_package=full python3_package=full python2_cmd=/usr/local/opt/python@2/bin/python2 blas_lapack_libs=lapack,blas optimize=n coverage=y
