--- a/data/liquidvapor.yaml
+++ b/data/liquidvapor.yaml
@@ -57,6 +57,14 @@ phases:
     T: 300.0
     P: 1.01325e+05
   pure-fluid-name: oxygen
+- name: carbon-dioxide
+  thermo: pure-fluid
+  elements: [C, O]
+  species: [CO2]
+  state:
+    T: 280.0
+    P: 1.01325e+05
+  pure-fluid-name: carbon-dioxide
 - name: carbondioxide
   thermo: pure-fluid
   elements: [C, O]
@@ -64,7 +72,10 @@ phases:
   state:
     T: 280.0
     P: 1.01325e+05
-  pure-fluid-name: carbondioxide
+  deprecated: >-
+    The phase name 'carbondioxide' in 'liquidvapor.yaml' is deprecated and will
+    be removed after Cantera 2.5. Use the phase name 'carbon-dioxide' instead.
+  pure-fluid-name: carbon-dioxide
 - name: heptane
   thermo: pure-fluid
   elements: [C, H]
@@ -73,6 +84,14 @@ phases:
     T: 300.0
     P: 1.01325e+05
   pure-fluid-name: heptane
+- name: HFC-134a
+  thermo: pure-fluid
+  elements: [C, F, H]
+  species: [C2F4H2]
+  state:
+    T: 300.0
+    P: 1.01325e+05
+  pure-fluid-name: HFC-134a
 - name: hfc134a
   thermo: pure-fluid
   elements: [C, F, H]
@@ -80,7 +99,10 @@ phases:
   state:
     T: 300.0
     P: 1.01325e+05
-  pure-fluid-name: HFC134a
+  pure-fluid-name: HFC-134a
+  deprecated: >-
+    The phase name 'hfc134a' in 'liquidvapor.yaml' is deprecated and will
+    be removed after Cantera 2.5. Use the phase name 'HFC-134a' instead.
 
 # Note that these species definitions are used ONLY to set the
 # reference state values for the entropy and enthalpy at 298.15 K,
