--- a/interfaces/cython/SConscript
+++ b/interfaces/cython/SConscript
@@ -47,6 +47,15 @@ localenv.Prepend(CPPPATH=[Dir('#include'), inc, numpy_include])
 localenv.Prepend(LIBS=localenv['cantera_libs'])
 if localenv['OS'] == 'Darwin':
     localenv.Append(LINKFLAGS='-undefined dynamic_lookup')
+
+    # Don't print deprecation warnings for internal Python changes.
+    # It seems that only clang on macOS prints these deprecation warnings.
+    # Only applies to Python 3.8. The field that is deprecated in Python 3.8
+    # and causes the warnings to appear will be removed in Python 3.9 so no
+    # further warnings should be issued. Cython has already implemented a fix
+    # in versions higher than 0.29.14.
+    if py_version == LooseVersion("3.8"):
+        localenv.Append(CXXFLAGS='-Wno-deprecated-declarations')
 elif localenv['OS'] == 'Windows':
     localenv.Append(LIBPATH=prefix+'/libs')
     if localenv['toolchain'] == 'mingw':
