--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -164,6 +164,7 @@ jobs:
           submodules: recursive
       - name: Install Apt dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install libboost-dev gfortran scons python3-numpy \
           python3-pip python3-setuptools python3-h5py python3-pandas \
           python3-ruamel.yaml python-numpy cython3 libsundials-dev liblapack-dev \
