--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,10 +49,18 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [ '3.5', '3.6', '3.7', '3.8' ]
+        python-version: [ '3.5', '3.6', '3.7', '3.8', '3.9' ]
         os: ['macos-10.15', 'macos-11.0']
       fail-fast: false
     steps:
+    # Attempt to fix intermittent cloning errors. The error message says something like
+    # error: RPC failed; curl 18 transfer closed with outstanding read data remaining
+    # The clone is already being done with --depth=1, so the next recommended fix is to
+    # increase the buffer size. See also:
+    # https://github.com/actions/virtual-environments/issues/2198
+    # https://stackoverflow.com/q/38618885
+    - name: Configure git
+      run: /usr/local/bin/git config --global http.postBuffer 1048576000
     - uses: actions/checkout@v2
       name: Checkout the repository
       with:
