--- a/data/h2o2.yaml
+++ b/data/h2o2.yaml
@@ -1,5 +1,6 @@
 description: |-
   Hydrogen-Oxygen submechanism extracted from GRI-Mech 3.0.
+  Modified from the original to include N2.
 
 generator: ck2yaml
 input-files: [h2o2.inp, gri30_tran.dat]
@@ -11,8 +12,8 @@ units: {length: cm, time: s, quantity: mol, activation-energy: cal/mol}
 phases:
 - name: ohmech
   thermo: ideal-gas
-  elements: [O, H, Ar]
-  species: [H2, H, O, O2, OH, H2O, HO2, H2O2, AR]
+  elements: [O, H, Ar, N]
+  species: [H2, H, O, O2, OH, H2O, HO2, H2O2, AR, N2]
   kinetics: gas
   transport: mixture-averaged
   state: {T: 300.0, P: 1 atm}
@@ -169,6 +170,24 @@ species:
     geometry: atom
     well-depth: 136.5
     diameter: 3.33
+- name: N2
+  composition: {N: 2}
+  thermo:
+    model: NASA7
+    temperature-ranges: [300.0, 1000.0, 5000.0]
+    data:
+    - [3.298677, 1.4082404e-03, -3.963222e-06, 5.641515e-09, -2.444854e-12,
+      -1020.8999, 3.950372]
+    - [2.92664, 1.4879768e-03, -5.68476e-07, 1.0097038e-10, -6.753351e-15,
+      -922.7977, 5.980528]
+    note: '121286'
+  transport:
+    model: gas
+    geometry: linear
+    well-depth: 97.53
+    diameter: 3.621
+    polarizability: 1.76
+    rotational-relaxation: 4.0
 
 reactions:
 - equation: 2 O + M <=> O2 + M  # Reaction 1
@@ -188,62 +207,64 @@ reactions:
 - equation: H + O2 + M <=> HO2 + M  # Reaction 6
   type: three-body
   rate-constant: {A: 2.8e+18, b: -0.86, Ea: 0.0}
-  efficiencies: {O2: 0.0, H2O: 0.0, AR: 0.0}
+  efficiencies: {O2: 0.0, H2O: 0.0, N2: 0.0, AR: 0.0}
 - equation: H + 2 O2 <=> HO2 + O2  # Reaction 7
   rate-constant: {A: 2.08e+19, b: -1.24, Ea: 0.0}
 - equation: H + O2 + H2O <=> HO2 + H2O  # Reaction 8
   rate-constant: {A: 1.126e+19, b: -0.76, Ea: 0.0}
-- equation: H + O2 + AR <=> HO2 + AR  # Reaction 9
+- equation: H + O2 + N2 <=> HO2 + N2  # Reaction 9
+  rate-constant: {A: 2.6e+19, b: -1.24, Ea: 0.0}
+- equation: H + O2 + AR <=> HO2 + AR  # Reaction 10
   rate-constant: {A: 7.0e+17, b: -0.8, Ea: 0.0}
-- equation: H + O2 <=> O + OH  # Reaction 10
+- equation: H + O2 <=> O + OH  # Reaction 11
   rate-constant: {A: 2.65e+16, b: -0.6707, Ea: 1.7041e+04}
-- equation: 2 H + M <=> H2 + M  # Reaction 11
+- equation: 2 H + M <=> H2 + M  # Reaction 12
   type: three-body
   rate-constant: {A: 1.0e+18, b: -1.0, Ea: 0.0}
   efficiencies: {H2: 0.0, H2O: 0.0, AR: 0.63}
-- equation: 2 H + H2 <=> 2 H2  # Reaction 12
+- equation: 2 H + H2 <=> 2 H2  # Reaction 13
   rate-constant: {A: 9.0e+16, b: -0.6, Ea: 0.0}
-- equation: 2 H + H2O <=> H2 + H2O  # Reaction 13
+- equation: 2 H + H2O <=> H2 + H2O  # Reaction 14
   rate-constant: {A: 6.0e+19, b: -1.25, Ea: 0.0}
-- equation: H + OH + M <=> H2O + M  # Reaction 14
+- equation: H + OH + M <=> H2O + M  # Reaction 15
   type: three-body
   rate-constant: {A: 2.2e+22, b: -2.0, Ea: 0.0}
   efficiencies: {H2: 0.73, H2O: 3.65, AR: 0.38}
-- equation: H + HO2 <=> O + H2O  # Reaction 15
+- equation: H + HO2 <=> O + H2O  # Reaction 16
   rate-constant: {A: 3.97e+12, b: 0.0, Ea: 671.0}
-- equation: H + HO2 <=> O2 + H2  # Reaction 16
+- equation: H + HO2 <=> O2 + H2  # Reaction 17
   rate-constant: {A: 4.48e+13, b: 0.0, Ea: 1068.0}
-- equation: H + HO2 <=> 2 OH  # Reaction 17
+- equation: H + HO2 <=> 2 OH  # Reaction 18
   rate-constant: {A: 8.4e+13, b: 0.0, Ea: 635.0}
-- equation: H + H2O2 <=> HO2 + H2  # Reaction 18
+- equation: H + H2O2 <=> HO2 + H2  # Reaction 19
   rate-constant: {A: 1.21e+07, b: 2.0, Ea: 5200.0}
-- equation: H + H2O2 <=> OH + H2O  # Reaction 19
+- equation: H + H2O2 <=> OH + H2O  # Reaction 20
   rate-constant: {A: 1.0e+13, b: 0.0, Ea: 3600.0}
-- equation: OH + H2 <=> H + H2O  # Reaction 20
+- equation: OH + H2 <=> H + H2O  # Reaction 21
   rate-constant: {A: 2.16e+08, b: 1.51, Ea: 3430.0}
-- equation: 2 OH (+M) <=> H2O2 (+M)  # Reaction 21
+- equation: 2 OH (+M) <=> H2O2 (+M)  # Reaction 22
   type: falloff
   low-P-rate-constant: {A: 2.3e+18, b: -0.9, Ea: -1700.0}
   high-P-rate-constant: {A: 7.4e+13, b: -0.37, Ea: 0.0}
   Troe: {A: 0.7346, T3: 94.0, T1: 1756.0, T2: 5182.0}
   efficiencies: {H2: 2.0, H2O: 6.0, AR: 0.7}
-- equation: 2 OH <=> O + H2O  # Reaction 22
+- equation: 2 OH <=> O + H2O  # Reaction 23
   rate-constant: {A: 3.57e+04, b: 2.4, Ea: -2110.0}
-- equation: OH + HO2 <=> O2 + H2O  # Reaction 23
+- equation: OH + HO2 <=> O2 + H2O  # Reaction 24
   duplicate: true
   rate-constant: {A: 1.45e+13, b: 0.0, Ea: -500.0}
-- equation: OH + H2O2 <=> HO2 + H2O  # Reaction 24
-  duplicate: true
-  rate-constant: {A: 2.0e+12, b: 0.0, Ea: 427.0}
 - equation: OH + H2O2 <=> HO2 + H2O  # Reaction 25
   duplicate: true
-  rate-constant: {A: 1.7e+18, b: 0.0, Ea: 2.941e+04}
-- equation: 2 HO2 <=> O2 + H2O2  # Reaction 26
+  rate-constant: {A: 2.0e+12, b: 0.0, Ea: 427.0}
+- equation: OH + H2O2 <=> HO2 + H2O  # Reaction 26
   duplicate: true
-  rate-constant: {A: 1.3e+11, b: 0.0, Ea: -1630.0}
+  rate-constant: {A: 1.7e+18, b: 0.0, Ea: 2.941e+04}
 - equation: 2 HO2 <=> O2 + H2O2  # Reaction 27
   duplicate: true
+  rate-constant: {A: 1.3e+11, b: 0.0, Ea: -1630.0}
+- equation: 2 HO2 <=> O2 + H2O2  # Reaction 28
+  duplicate: true
   rate-constant: {A: 4.2e+14, b: 0.0, Ea: 1.2e+04}
-- equation: OH + HO2 <=> O2 + H2O  # Reaction 28
+- equation: OH + HO2 <=> O2 + H2O  # Reaction 29
   duplicate: true
   rate-constant: {A: 5.0e+15, b: 0.0, Ea: 1.733e+04}
