--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,13 @@ Source: cantera
 Section: science
 Priority: optional
 Maintainer: Raymond Speth <speth@mit.edu>
-Build-Depends: debhelper (>= 11.0.0), scons, python-dev, python-numpy-dev, python-setuptools, cython (>= 0.23.0), gfortran, libsundials-dev, liblapack.so, libblas-dev, python3-dev, python3-numpy-dev, python3-setuptools, libeigen3-dev, libgtest-dev, libboost-dev, libfmt-dev
+Build-Depends: debhelper (>= 11.0.0), scons, cython (>= 0.23.0), gfortran, libsundials-dev, liblapack.so, libblas-dev, python3-dev (>= 3.5.0), python3-numpy-dev (>= 1.12.0), python3-setuptools, libeigen3-dev, libgtest-dev, libboost-dev, libfmt-dev (>= 3.0.1)
 Standards-Version: 4.1.4
 Homepage: https://www.cantera.org
 
 Package: cantera-common
 Architecture: any
-Depends: python, python-numpy, ${shlibs:Depends}, ${misc:Depends}
+Depends: python3, python3-numpy, ${shlibs:Depends}, ${misc:Depends}
 Description: Common files needed for all Cantera interfaces
  Cantera is a suite of object-oriented software tools for solving problems
  involving chemical kinetics, thermodynamics, and/or transport processes.
@@ -20,23 +20,9 @@ Description: Common files needed for all Cantera interfaces
  This package includes programs for parsing and converting chemical
  mechanisms, a set of common mechanism files, and several sample problems.
 
-Package: cantera-python
-Architecture: any
-Depends: cantera-common, python, python-numpy, ${shlibs:Depends}, ${misc:Depends}
-Description: Python user interface for Cantera
- Cantera is a suite of object-oriented software tools for solving problems
- involving chemical kinetics, thermodynamics, and/or transport processes.
- Cantera can be used for simulating time-dependent or steady reactor
- networks and one-dimensional reacting flows. Thermodynamic models for
- ideal gases, aqueeous electrolytes, plasmas, and multiphase substances
- are provided.
- .
- This package includes the Cantera Python module, as well as the
- graphical MixMaster application.
-
 Package: cantera-python3
 Architecture: any
-Depends: cantera-common, python3, python3-numpy, ${shlibs:Depends}, ${misc:Depends}
+Depends: cantera-common, python3 (>= 3.5.0), python3-numpy (>= 1.12.0), ${shlibs:Depends}, ${misc:Depends}
 Description: Python 3 user interface for Cantera
  Cantera is a suite of object-oriented software tools for solving problems
  involving chemical kinetics, thermodynamics, and/or transport processes.
@@ -45,8 +31,7 @@ Description: Python 3 user interface for Cantera
  ideal gases, aqueeous electrolytes, plasmas, and multiphase substances
  are provided.
  .
- This package includes the Cantera Python 3 module, as well as the
- graphical MixMaster application.
+ This package includes the Cantera Python 3 module
 
 Package: cantera-dev
 Architecture: any
@@ -64,7 +49,7 @@ Description: Header files and static libraries for Cantera
 
 Package: cantera
 Architecture: any
-Depends: cantera-common, cantera-python, ${misc:Depends}
+Depends: cantera-common, cantera-python3, ${misc:Depends}
 Description: Tools for chemical kinetics, thermodynamics and transport properties
  Cantera is a suite of object-oriented software tools for solving problems
  involving chemical kinetics, thermodynamics, and/or transport processes.
