--- a/debian/rules
+++ b/debian/rules
@@ -29,8 +29,6 @@ binary: build
 	chmod a+x debian/cantera-common/usr/bin/ctml_writer debian/cantera-common/usr/bin/ck2cti
 	rm -f debian/cantera-python/usr/bin/ctml_writer
 	rm -f debian/cantera-python/usr/bin/ck2cti
-	rm -f debian/cantera-python3/usr/bin/ctml_writer
-	rm -f debian/cantera-python3/usr/bin/ck2cti
 
 	dh_strip
 	dh_shlibdeps
@@ -45,7 +43,7 @@ binary-indep: binary
 	/bin/true
 
 build:
-	scons build -j6 prefix=/usr blas_lapack_libs=lapack,blas debug=n system_sundials=y f90_interface=y renamed_shared_libraries=n python_package=full python3_package=y layout=debian system_eigen=y extra_inc_dirs=/usr/include/eigen3 system_fmt=n
+	scons build -j6 prefix=/usr blas_lapack_libs=lapack,blas debug=n system_sundials=y f90_interface=y renamed_shared_libraries=n python_package=full layout=debian system_eigen=y extra_inc_dirs=/usr/include/eigen3 system_fmt=y
 
 build-arch: build
 
