--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,13 @@ Source: cantera
 Section: science
 Priority: optional
 Maintainer: Raymond Speth <speth@mit.edu>
-Build-Depends: debhelper (>= 11.0.0), scons, cython (>= 0.23.0), gfortran, libsundials-dev, liblapack.so, libblas-dev, python3-dev (>= 3.5.0), python3-numpy (>= 1.12.0), python3-setuptools, libeigen3-dev, libgtest-dev, libboost-dev, libfmt-dev (>= 3.0.1)
+Build-Depends: debhelper (>= 11.0.0), scons, cython (>= 0.23.0), gfortran, libsundials-dev, liblapack.so, libblas-dev, python3-dev (>= 3.5.0), python3-numpy (>= 1.12.0), python3-setuptools, libeigen3-dev, libgtest-dev, libboost-dev, libfmt-dev (>= 3.0.1), libyaml-cpp-dev (>= 0.6.0)
 Standards-Version: 4.1.4
 Homepage: https://www.cantera.org
 
 Package: cantera-common
 Architecture: any
-Depends: python3, python3-numpy, ${shlibs:Depends}, ${misc:Depends}
+Depends: python3, python3-numpy, python3-ruamel.yaml (>= 0.15.34), ${shlibs:Depends}, ${misc:Depends}
 Description: Common files needed for all Cantera interfaces
  Cantera is a suite of object-oriented software tools for solving problems
  involving chemical kinetics, thermodynamics, and/or transport processes.
@@ -22,7 +22,7 @@ Description: Common files needed for all Cantera interfaces
 
 Package: cantera-python3
 Architecture: any
-Depends: cantera-common, python3 (>= 3.5.0), python3-numpy (>= 1.12.0), ${shlibs:Depends}, ${misc:Depends}
+Depends: cantera-common, python3 (>= 3.5.0), python3-numpy (>= 1.12.0), libyaml-cpp0.6, python3-ruamel.yaml (>= 0.15.34), ${shlibs:Depends}, ${misc:Depends}
 Description: Python 3 user interface for Cantera
  Cantera is a suite of object-oriented software tools for solving problems
  involving chemical kinetics, thermodynamics, and/or transport processes.
@@ -35,7 +35,7 @@ Description: Python 3 user interface for Cantera
 
 Package: cantera-dev
 Architecture: any
-Depends: cantera-common, libsundials-dev, liblapack.so, libblas-dev, ${misc:Depends}
+Depends: cantera-common, libsundials-dev, liblapack.so, libblas-dev, libyaml-cpp-dev (>= 0.6.0), ${misc:Depends}
 Description: Header files and static libraries for Cantera
  Cantera is a suite of object-oriented software tools for solving problems
  involving chemical kinetics, thermodynamics, and/or transport processes.
