--- a/debian/rules
+++ b/debian/rules
@@ -49,7 +49,7 @@ binary-indep: binary
 	/bin/true
 
 build:
-	scons build -j6 prefix=/usr blas_lapack_libs=lapack,blas debug=n system_sundials=y f90_interface=y renamed_shared_libraries=n python_package=full layout=debian system_eigen=y extra_inc_dirs=/usr/include/eigen3 system_fmt=y
+	scons build -j6 prefix=/usr blas_lapack_libs=lapack,blas system_sundials=y f90_interface=y renamed_shared_libraries=n python_package=full layout=debian system_eigen=y extra_inc_dirs=/usr/include/eigen3 system_fmt=y
 
 build-arch: build
 
