--- a/data/nasa.yaml
+++ b/data/nasa.yaml
@@ -12,7 +12,7 @@ description: |-
   Report TM-4513, October 1993.
 
 generator: cti2yaml
-cantera-version: 2.5.0a3
+cantera-version: 2.5.0
 date: Wed, 11 Dec 2019 16:59:09 -0500
 input-files: [nasa.cti]
 
