[SCons] Add configuration for Sphinx options
The default will exit the Sphinx build with error code 1 if any warnings
are encountered, but it will print all the warnings from a single run.

Since all the warnings from Sphinx are now resolved, this change means
that any CI failures due to warnings from Sphinx should be fixed before
merging a pull request.

--- a/doc/SConscript
+++ b/doc/SConscript
@@ -110,7 +110,7 @@ if localenv['sphinx_docs']:
 
     sphinxdocs = build(localenv.Command('${SPHINXBUILD}/html/index.html',
         'sphinx/conf.py',
-        '${sphinx_cmd} -b html -d ${SPHINXBUILD}/doctrees ${SPHINXSRC} ${SPHINXBUILD}/html'))
+        '${sphinx_cmd} ${sphinx_options} -b html -d ${SPHINXBUILD}/doctrees ${SPHINXSRC} ${SPHINXBUILD}/html'))
     env.Alias('sphinx', sphinxdocs)
     env.Depends(sphinxdocs, env['python_module'])
 
